# University

./: ..gitignore.swp  .gitignore
2021_1/Дазы банных/: lab02.sql
2021_1/Дазы банных/Отчёты/: Лаба 1.docx
2021_1/Системное программирование/Отчёты/: script.sh.save  Лабораторная 1.docx
2021_1/Системный анализ/docs/: ЛАБ2.docx  ЛАБСМО4.doc  Лабзапасы5.doc
2021_1/Системный анализ/labs/: lab01.xlsx
2_2/Английский язык/: AI.dotx  Image.docx
2_2/Дазы банных/: .~lock.ЛАБ 4_Подзапросы.docx#  .~lock.ЛАБ 5_JOIN.docx#  .~lock.ЛАБ 6_Модификация.docx#  lab01.sql  lab03.sql  lab04.sql  lab05.sql  lab06.sql  lab07.sql  lab08.sql  lab09.sql  lab10.sql  lab101.sql  ЛАБ 3_Группировка.doc
2_2/Дазы банных/Отчёты/: .~lock.Лаба 3.docx#  .~lock.Лаба 5.odt#  .~lock.Лаба 6.docx#  Лаб 7docx.docx  Лаба 10.docx  Лаба 2.docx  Лаба 3.docx  Лаба 4.docx  Лаба 5.odt  Лаба 6.docx  Лаба 8.docx  Лаба 9.docx
2_2/ООП/Курсовой/: danilakursach.docx
2_2/Политология/: Китай.docx
2_2/Системное программирование/linux1/: .~lock.СП_Лаба_1.docx#  СП_Лаба_1.docx
2_2/Системное программирование/Лекции/: 01.txt
2_2/Системное программирование/Отчёты/: file2.txt  Лабораторная 1.docx
2_2/Системный анализ/docs/: ЛАБ1-21.docx  ЛАБ3.docx
2_2/Системный анализ/labs/: .~lock.lab01.xlsx#  lab01.xlsx
3_1/LinuxLabs/lab01/: cat.cpp  date.cpp  txt.txt  write.cpp
3_1/LinuxLabs/lab02/: curlist.sh  currency.sh  example1.sh  nameandspec.sh  user.txt  yesno.sh
3_1/LinuxLabs/lab03/: bank.cpp  randgame.cpp  timesignal.cpp
3_1/Вычислительная матеша/MathLabs/: kramer.py  pyproject.toml
3_1/ОЗИ/: lab01CS.docx
(+221 files in other folders)
