[tool.poetry]
name = "mathlabs"
version = "0.1.0"
description = ""
authors = ["Danila Kislitsyn <dangost16@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
